# discovery

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  common.h  discovery  discovery.config  discovery.cpp  discovery.h  gba-emu.cpp  test.cpp  tests
cpu/: arm.cpp  arm.h  arm_7tdmi.cpp  arm_7tdmi.h  arm_alu.inl  common.h  cpu.cpp  cpu.h  decode.h  instruction.cpp  instruction.h  util.cpp  util.h
cpu/docs/: resources.txt
cpu/tests/: data_processing_tests.cpp  instruction_tests.cpp  tests.cpp
discovery.dSYM/Contents/: Info.plist
docs/: docs.html  misc_notes.txt  resources.txt  sound.txt
docs/css/: styles.css
docs/js/: render.js
docs/scripts/: fourier.py
gpu/: gpu.cpp  gpu.h
include/: APU.h  APU.inl  Arm7.h  Arm7Tdmi.h  AudioStat.h  Backup.h  CMakeLists.txt  CircularBuffer.h  Config.h  Discovery.h  Flash.h  Gamepad.h  IRQ.h  LcdStat.h  Memory.h  PPU.h  Scheduler.h  Timer.h  Util.h  Util.inl  Watcher.h  arm_7tdmi.h  audio_stat.h  common.h  config.h  cpu.h  discovery.h  dmath.h  gpu.h  lcd_stat.h  log.h  memory.h  mmio.h  obj_attr.h  timer.h  util.h  util.inl
include/backup/: Backup.h  Flash.h  None.h  SRAM.h
lib/: .CircularBuffer.inl.swp  .audio.h.swp  CircularBuffer.inl  audio.h
memory/: common.h  memory.cpp  memory.h
src/: APU.cpp  Arm7.cpp  Arm7Tdmi.cpp  ArmISA.cpp  CMakeLists.txt  CircularBuffer.cpp  Discovery.cpp  Flash.cpp  Gamepad.cpp  HandlerArm.cpp  HandlerThumb.cpp  HandlersThumb.cpp  IRQ.cpp  Memory.cpp  PPU.cpp  Scheduler.cpp  ThumbISA.cpp  Timer.cpp  Util.cpp  Watcher.cpp  arm_7tdmi.cpp  arm_7tdmi.h  arm_alu.cpp  arm_isa.cpp  config.cpp  discovery.cpp  discovery.h  dmath.cpp  gpu.cpp  gpu.h  lcd_stat.cpp  lcd_stat.h  main.cpp  memory.cpp  memory.h  obj_attr.cpp  obj_attr.h  swi.cpp  thumb_alu.cpp  thumb_isa.cpp  (+3 more)
src/backup/: Flash.cpp  None.cpp  SRAM.cpp
src/common/: common.h  cpu.h  gpu.h  memory.h  util.cpp  util.h
src/platform/imgui/: main.cpp
src/platform/qt/: DebugMainWindow.cpp  DebugMainWindow.h  main.cpp
src/platform/sdl/: main.cpp
src/platform/wx/: App.cpp  App.h  Frame.cpp  Frame.h  Panel.cpp  Panel.h  common.h  main.cpp
src/tests/: data_processing_tests.cpp
src/tests/assembly/: assembly.test.s  swi_div.asm
src/tests/assembly/lib/: macros.inc
tests/: README.md  instruction_tests.cpp  tests.cpp
tests/assembly/: irq.s  swi_divt.asm
